--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = perl-TimeDate
 url = https://cpan.metacpan.org/authors/id/A/AT/ATOOMIC/TimeDate-2.31.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/atoomic/perl-TimeDate.git
 domain = 
 
 [autospec]
