perl-TimeDate: Autospec creation for update from version 2.31 to version 2.32
Aaron Crane (1):
      Fix test to run on leap days

Nicolas R (2):
      Fixup bugtracker
      Bump version to 2.32

--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = perl-TimeDate
-url = https://cpan.metacpan.org/authors/id/A/AT/ATOOMIC/TimeDate-2.31.tar.gz
+url = https://cpan.metacpan.org/authors/id/A/AT/ATOOMIC/TimeDate-2.32.tar.gz
 archives = 
 giturl = https://github.com/atoomic/perl-TimeDate.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
